<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drawer.approval.ApprovalRequestLeaveFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/title"
            android:text="증명서발급"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"/>

        <TextView
            android:text="증명서 선택"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/employment"
                android:text="@string/certi1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/receipt"
                android:text="@string/certi2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/certi_ext"
                android:text="@string/certi3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RadioGroup>


        <TextView
            android:text="제출처"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/sbm_public"
                android:text="@string/reason4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/sbm_bank"
                android:text="@string/reason5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/sbm_company"
                android:text="@string/reason6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RadioGroup>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_free_upload"
        android:text="상신"
        android:backgroundTint="#ECF2FF"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>